--- a/index.ipynb
+++ b/index.ipynb
@@ -198,19 +198,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-b584fa25b33d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-b584fa25b33d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    retun restaurant\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name = restaurant"
+    "    name = restaurant\n",
+    "    return name"
    ]
   },
   {
