--- a/index.ipynb
+++ b/index.ipynb
@@ -196,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name = restaurant\n",
+    "    name = restaurant.title()\n",
     "    return name"
    ]
   },
