--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -196,30 +196,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name = restaurant.keys(name)\n",
+    "    name = restaurant.keys('name')\n",
     "    return name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'name' referenced before assignment",
+     "ename": "TypeError",
+     "evalue": "keys() takes no arguments (1 given)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-9fc568b0c5b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrestaurant_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-82d5a7df62e5>\u001b[0m in \u001b[0;36mrestaurant_name\u001b[0;34m(restaurant)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrestaurant_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrestaurant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'name' referenced before assignment"
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-9fc568b0c5b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrestaurant_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-d032e1f27f4f>\u001b[0m in \u001b[0;36mrestaurant_name\u001b[0;34m(restaurant)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrestaurant_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrestaurant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: keys() takes no arguments (1 given)"
      ]
     }
    ],
