--- a/index.ipynb
+++ b/index.ipynb
@@ -196,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name = restaurant.keys(name)\n",
-    "    return name"
+    "    name2 = restaurant.keys(name)\n",
+    "    return name2"
    ]
   },
   {
