--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name2 = restaura\n",
+    "    name2 = restaurant['name']\n",
     "    return name2"
    ]
   },
