Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,17 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    rate = restaurant['']"
+    "    rate = restaurant['rating']\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
