--- a/index.ipynb
+++ b/index.ipynb
@@ -319,12 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-685444745311>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-685444745311>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    retaurant['rating'] => alternative['rating']\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    retaurant['rating'] => alternative[]"
+    "    retaurant['rating']  alternative['rating']"
    ]
   },
   {
