Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,12 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    retaurant['rating'] > alternative['rating']"
+    "    return retaurant['rating'] > alternative['rating']"
    ]
   },
   {
