--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    first = retaurant['rating'] "
+    "    first = retaurant['rating']\n",
+    "    second = alternative[]"
    ]
   },
   {
