Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    first = retaurant['rating']\n",
-    "    second = alternative[]"
+    "    second = alternative['rating']\n",
+    "    return "
    ]
   },
   {
