--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    first = restaurant['rating']\n",
+    "    return restaurant['rating']\n",
     "    second = alternative['rating']\n",
     "    return first"
    ]
