Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,8 +324,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    return restaurant['rating']\n",
-    "    second = alternative['rating']\n",
+    "    return restaurant['rating'] > alternative['rating']\n",
     "    return first"
    ]
   },
