--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    return restaurant['len()']"
+    "    return restaurant['len(price)']"
    ]
   },
   {
