Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
    ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    first = len('restaurant['price']'')"
+    "    first = len("
    ]
   },
   {
