--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
    ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    first = len("
+    "    first = restaurant['price']"
    ]
   },
   {
