Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,8 @@
    ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    first = restaurant['price']"
+    "    first = restaurant['price']\n",
+    "    second = alternative"
    ]
   },
   {
