Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,8 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    first = restaurant['price']\n",
-    "    second = alternative"
+    "    second = alternative['price']\n",
+    "    return len"
    ]
   },
   {
