--- a/index.ipynb
+++ b/index.ipynb
@@ -410,7 +410,7 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    first = restaurant['price']\n",
     "    second = alternative['price']\n",
-    "    return len(first)"
+    "    return first "
    ]
   },
   {
