--- a/index.ipynb
+++ b/index.ipynb
@@ -482,12 +482,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return restaurant['rating'] "
+    "    return restaurant['rating'] > rating"
    ]
   },
   {
