Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "def restaurant_rating(restaurant):\n",
     "    rate = restaurant['rating']\n",
-    "    return rate"
+    "    return"
    ]
   },
   {
