Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,13 +254,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def restaurant_rating(restaurant):\n",
-    "    rate = restaurant['rating']\n",
-    "    return"
+    "    return restaurant['rating']\n",
+    "    "
    ]
   },
   {
